<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">URCAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Ultimate Remote Control</string>
    <string name="no_bluetooth_title">No device found</string>
    <string name="no_bluetooth_message">No bluetooth device was found. This app requires a bluetooth device.\n Press OK to exit the application.</string>
    <string name="setup_enablingbluetooth">Requesting bluetooth</string>
    <string name="setup_bluetooth_disabled">Bluetooth is disabled.</string>
    <string name="setup_welcome">Welcome to the Ultimate Remote Control!\nYou need to select a bluetooth device to connect to.</string>
    <string name="setup_label_currentdevice">Current device: %s</string>
    <string name="setup_nodeviceselected">No device selected</string>
    <string name="setup_button_selectdevice">Select device</string>
    <string name="setup_button_connectdevice">Connect to device</string>
    <string name="title_activity_device_list">Choose a device</string>
    <string name="devicelist_paired_devices">Paired devices</string>
    <string name="setup_device_connected">Device connected!</string>
    <string name="setup_device_connectionfailed">Device connection failed!</string>
    <string name="drive">Drive</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ToggleButton1">1</string>
    <string name="ToggleButton2">2</string>
    <string name="ToggleButton3">3</string>
    <string name="ToggleButton4">4</string>
    <string name="ToggleButton5">5</string>
    <string name="ToggleButton6">6</string>
    <string name="ToggleButton7">7</string>
    <string name="ToggleButton8">8</string>
    <string name="UseAccelerometer">Use accelerometer</string>
</resources>