<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/setup_label_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/setup_welcome"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/setup_current_device_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/setup_label_top"
        android:layout_marginTop="14dp"
        android:text="@string/setup_label_currentdevice" />

    <Button
        android:id="@+id/setup_select_device_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_current_device_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/setup_button_selectdevice" />
    
    <Button
        android:id="@+id/setup_connect_device_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_select_device_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/setup_button_connectdevice" />
    
    <TextView
        android:id="@+id/setup_connect_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_connect_device_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/button_drive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/setup_connect_state_label"
        android:layout_centerHorizontal="true"
        android:text="@string/drive" />

</RelativeLayout>
